
  [ Mihai Moldovan ]
  * New upstream release (4.0.4.1):
    - INSTALL: add more verbose instructions on how to build X2Go Client and
      friends.
    - onmainwindow.{cpp,h}: rename slotScDaemonOut() and slotScDaemonError()
      to slotScDaemonStdOut() and slotScDaemonStdErr(). I will need
      slotScDaemonError() later and the previous names were a bit of a
      misnomer.

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 26 May 2015 21:42:09 +0200

x2goclient (4.0.4.0-0x2go1) unstable; urgency=low

  [ Mike DePaulo ]
  * New upstream release (4.0.4.0):
    - Windows: Do not delete saved PuTTY sessions when Kerberos 5
      (GSSAPI) authentication is enabled (Fixes: #625/#789)
    - Windows: Fix "Connection failed" "pscp" error with folder
      sharing when Kerberos 5 (GSSAPI) auth is used, and the
      server-side home dir is at a path other than /home/$USER
      (Fixes: #868)
    - Windows: Fix audio (PulseAudio) when Kerberos 5
      (GSSAPI) authentication is used (Fixes: #869)
    - Windows: Include debug build in the regular installer.
      It is an optional component during the install. It is not
      installed by default.
    - Windows: Include Pageant and PuTTYgen in the installer.
      They are optional components during the install. They are
      installed by default.
    - Windows: Add descriptions for the "components" in the installer
      (English language only at this time)
    - Windows: You can now view the version and some other info by:
      right-click on the installer -> Properties -> Details
      (English language only at this time)
    - Windows: Upgrade bundled PulseAudio from 5.0-rev18 to 6.0-11.1
      (No known impacts to X2Go, except for the fact that many needed
       patches are now included in upstream PulseAudio.)
    - Windows: Upgrade bundled VcXsrv from 1.15.2.2-xp+vc2013+x2go1 to
      1.17.0.0-1 (X2Go/Arctica Build)
      Note that X2Go Client for Windows 4.0.3.2-20150508 has an