@@ -93,6 +93,18 @@ QString convert_to_rich_text (const QString &text, bool force) {
   return (fixup_text);
 }
 
+void show_RichText_Generic_MsgBox (QMessageBox::Icon icon, const QString &main_text, const QString &informative_text) {
+  QString fixup_main_text (convert_to_rich_text (main_text));
+  QString fixup_informative_text (convert_to_rich_text (informative_text, true));
+
+  QMessageBox msg_box (icon, QString ("X2Go Client"), fixup_main_text, QMessageBox::Ok);
+
+  msg_box.setTextFormat (Qt::RichText);
+  msg_box.setInformativeText (fixup_informative_text);
+  msg_box.setWindowModality (Qt::WindowModal);
+  msg_box.exec ();
+}
+
 void show_RichText_WarningMsgBox (const QString &main_text, const QString &informative_text) {
   QString fixup_main_text (convert_to_rich_text (main_text));
   QString fixup_informative_text (convert_to_rich_text (informative_text, true));
