@@ -8,6 +8,8 @@ x2goclient (4.0.4.1-0x2go1) UNRELEASED; urgency=low
       to slotScDaemonStdOut() and slotScDaemonStdErr(). I will need
       slotScDaemonError() later and the previous names were a bit of a
       misnomer.
+    - x2goutils.{cpp,h}: add new show_RichText_Generic_MsgBox() main function
+      designed to replace the show_RichText_WarningMsgBox() function.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 26 May 2015 21:42:09 +0200
 
